# pleasefix

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Makefile  NOTICE  README.md  compose.override.yaml  compose.yaml  conftest.py  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: openapi.json  v1.py
api/management/commands/: export_openapi_schema.py
config/: celery.py  settings.py  urls.py
core/: abuse.py  admin.py  context_processors.py  forms.py  importers.py  models.py  views.py
core/fixtures/sample/: README.md
core/management/commands/: cleanup_orphan_media.py  export_good_first_issues.py  runserver.py  seed_sample_data.py
core/migrations/: 0001_initial.py  0002_issue_public_id_source_url.py  0003_issue_ip_hash_issue_is_hidden_issueupdate_flag.py  0004_issue_claim_token_hash_issue_owner_and_more.py  0005_issue_issue_public_recent_and_more.py  0006_area_categorygroup_tag_issue_address_issue_anonymous_and_more.py  0007_issuemedia_issuereference_delete_issuephoto.py  0008_media_split.py  0009_remove_media_session_key_media_owner_token.py
core/tests/: test_abuse_internals.py  test_api_issue_create.py  test_browser_import.py  test_claim.py  test_dev_site.py  test_domain_model.py  test_issue_flow.py  test_media_and_links.py  test_runserver_check.py  test_seed.py  test_share_and_import.py  test_smoke.py  test_updates_and_abuse.py
docs/: ABUSE.md  DESIGN.md  GOOD_FIRST_ISSUES.md  ONBOARDING-WINDOWS.md  TRACKS.md  WALKTHROUGH.md  WHY.md
site/: contribute.html  dev.html  good-first-issues.html  index.html
static/css/: site.css
templates/: about.html  base.html  home.html
templates/issues/: detail.html  list.html  report_import.html  report_new.html
(+3 files in other folders)
